--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "azishapidin/indoregion": "2.2.2",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "realrashid/sweet-alert": "^6.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
